# ERP_AI

./: .gitignore  MONGO_TRAIN.json1  README.md  db_explorer.py  main.py  pyproject.toml  requirements.txt  search_schema.py  temp_fields.json
erp_backend/: __init__.py
erp_backend/api/: models.py  server.py
erp_backend/core/: config.py  feedback.py  metrics.py  observability.py  permissions.py  security.py  utils.py
erp_backend/llm/: runtime.py
erp_backend/services/: continuous_trainer.py  field_retriever.py  intent.py  llm.py  orchestrate.py  query.py  query_prompts.py  query_rewriter.py  query_validate.py  schema_indexer.py  schema_runtime.py  self_healing.py
erp_backend/storage/: cache.py  mongo.py  vector_store.py
logs/: erp_perf_timing.jsonl
monitoring/: docker-compose.yml  loki-config.yml  prometheus.yml  promtail-config.windows.yml  promtail-config.yml  start_windows.ps1
monitoring/grafana/provisioning/alerting/: erp_alerts.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml  erp_dashboard.json
monitoring/grafana/provisioning/datasources/: datasources.yml
nlq-copy/: package-lock.json  package.json  server.js
nlq-copy/client/: index.html  package-lock.json  package.json  vite.config.js
nlq-copy/client/src/: App.css  App.jsx
nlq-copy/client/src/components/: AIMessage.jsx  ChartRenderer.jsx  ClarificationBar.jsx  DataTable.jsx  InputArea.jsx  Messages.jsx  Sidebar.jsx  StarsBackground.jsx  (+2 more)
nlq-copy/public/: index.html
nlq-copy/public/assets/: index-1cCr3qUd.js  index-BxuANF-Z.css  index-CKblItOS.js  index-CwQJyEhm.css
(+5 files in other folders)
